plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "dev.architectury.loom" version "1.9-SNAPSHOT" apply false
    id "com.github.johnrengelman.shadow" version "8.1.1" apply false
    id "io.freefair.lombok" version "8.4"
}

architectury {
    minecraft = rootProject.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"
    apply plugin: "dev.architectury.loom"
    apply plugin: "io.freefair.lombok"
    apply plugin: "maven-publish"

    archivesBaseName = rootProject.mod_id
    version = rootProject.minecraft_version + "-" + rootProject.mod_version
    group = rootProject.maven_group

    repositories {
        maven { url "https://maven.fabricmc.net/" }
        maven { url "https://maven.shedaniel.me" }
        maven { url "https://maven.neoforged.net/releases" }
        maven { url "https://maven.blamejared.com/" }
        maven { url "https://maven.terraformersmc.com/" }
        maven { url "https://maven.wispforest.io" }
        maven { url "https://maven.wispforest.io/releases" }
        maven { url "https://maven.su5ed.dev/releases" }
        maven { url "https://maven.theillusivec4.top/" }
        maven { url 'https://maven.ladysnake.org/releases'}
        maven { url 'https://maven.wispforest.io/releases' }
        maven { url 'https://maven.su5ed.dev/releases' }
        maven { url 'https://jitpack.io' }
        maven {
            url "https://www.cursemaven.com"
            content {
                includeGroup "curse.maven"
            }
        }
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        mappings loom.layered() {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${rootProject.minecraft_version}:${rootProject.parchment_mapping_version}@zip")
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 21
    }

    tasks.register('collectJars', Copy) {
        subprojects {
            def ignoredProjects = ['common']

            if (!ignoredProjects.contains(project.name)) {
                def remapJar = project.tasks.named('remapJar')

                dependsOn remapJar
                from remapJar
                into 'build/libs'
            }
        }
    }

    java {
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
}
